[JENKINS-58157] Fixing 'delete build' button too long

--- a/war/src/main/webapp/css/style.css
+++ b/war/src/main/webapp/css/style.css
@@ -26,12 +26,16 @@
 
 #tasks {
   margin-bottom: 20px;
+  display: inline-block;
 }
 
 #tasks .task {
   margin-bottom: 4px;
   font-size: 14px;
+  max-width: 325px;
+  overflow: hidden;
   white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 /* buildQueue */
